# fcmd

./: .bumpversion.toml  .copier-answers.yml  .coveragerc  .gitignore  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
.trae/docs/: iter-01-p0-core.md  iter-02-p1-tool-cli.md  iter-03-p2-pymake-expand.md  iter-04-p3-tool-discovery.md  iter-05-p4-graph-builtin.md  iter-06-p5-info-builtin.md  iter-07-p6-cli-tools.md  iter-08-p7-completion-yaml-single-command.md  iter-09-p8-which-sysinfo-portcheck-gittool.md  iter-10-p9-piptool-taskkill-folderback.md  iter-11-p10-filelevel-bumpversion-autofmt.md  iter-12-p11-clr-packtool.md  iter-13-p12-models-refactor.md  iter-14-p13-conditions-module.md  iter-15-p14-conditions-extended-toolkit-literal.md  iter-16-p15-toolkit-coverage-100.md  iter-17-p16-executors-coverage-99.md  iter-18-p17-tool-ports.md  iter-19-p18-error-info-and-summary.md  iter-20-p19-test-isolation-and-coverage.md  iter-21-p20-code-quality-cleanup.md  iter-22-p21-pdf-img-tools.md  iter-23-p22-resolve-cli-legacy-issues.md  iter-24-p23-env-doctor-builtin-commands.md  iter-25-p24-readme-enhancement.md  iter-26-p25-main-coverage-gaps.md  iter-27-p26-profiler-porting.md  iter-28-p27-tox-cross-version-fix.md  iter-29-p28-zipencrypt-tool.md  iter-30-p29-filerename-tool.md  iter-31-p30-textdiff-tool.md  iter-32-p31-archivex-tool.md  iter-33-p32-csvtool-tool.md  iter-34-p33-jsontool-tool.md  iter-35-p34-pathtool-tool.md  iter-36-p35-filesearch-tool.md  iter-37-p36-archivex-create.md  iter-38-p37-csvtool-merge.md  iter-39-p38-dockercmd-lscalc.md  iter-40-p39-test-restructure.md
.trae/documents/: fcmd-architecture-plan.md  fcmd-p0-finalization-plan.md  fcmd-p0-implementation-plan.md  fcmd-p1-implementation-plan.md
.trae/req/: req-01-功能需求.md
.trae/req/done/: req-01-功能需求.md
.trae/rules/: rule-11-python-standards.md
.trae/skills/python-cli/: SKILL.md
.trae/skills/python-config/: SKILL.md
.trae/skills/python-gui-pyside/: PATTERNS.md  SKILL.md
.trae/skills/python-logging/: SKILL.md
.trae/skills/python-subprocess/: SKILL.md
.trae/skills/python-testing/: SKILL.md
docs/: api.rst  conf.py  index.rst
scripts/: verify_api.py  verify_p1.py
src/fcmd/: __init__.py  __main__.py  cli.py  command.py  conditions.py  console.py  context.py  dag.py  errors.py  executors.py  profiling.py  report.py  task.py  yaml_loader.py
src/fcmd/apis/: __init__.py  toolkit.py
src/fcmd/cli/: __init__.py  _common.py  archivex.py  autofmt.py  bumpversion.py  clr.py  csvtool.py  dockercmd.py  envdev.py  filedate.py  filelevel.py  filerename.py  filesearch.py  folderback.py  folderzip.py  gittool.py  hashfile.py  imagetool.py  jsontool.py  lscalc.py  main.py  packtool.py  pathtool.py  pdftool.py  piptool.py  portcheck.py  pymake.py  reseticoncache.py  screenshot.py  setenv.py  sshcopyid.py  sysinfo.py  taskkill.py  textdiff.py  which.py  writefile.py  zipencrypt.py
src/fcmd/models/: __init__.py  command.py  filefilter.py  version.py
src/fcmd/tools/: __init__.py
tests/: __init__.py  test_cli.py  test_cli_archivex.py  test_cli_autofmt.py  test_cli_bumpversion.py  test_cli_clr.py  test_cli_csvtool.py  test_cli_dockercmd.py  test_cli_envdev.py  test_cli_filedate.py  test_cli_filelevel.py  test_cli_filerename.py  test_cli_filesearch.py  test_cli_folderback.py  test_cli_folderzip.py  test_cli_gittool.py  test_cli_hashfile.py  test_cli_imagetool.py  test_cli_jsontool.py  test_cli_lscalc.py  test_cli_packtool.py  test_cli_pathtool.py  test_cli_pdftool.py  test_cli_piptool.py  test_cli_portcheck.py  test_cli_profiler.py  test_cli_pymake.py  test_cli_reseticoncache.py  test_cli_screenshot.py  test_cli_setenv.py  test_cli_sshcopyid.py  test_cli_sysinfo.py  test_cli_taskkill.py  test_cli_textdiff.py  test_cli_tools.py  test_cli_tools_p10.py  test_cli_tools_p11.py  test_cli_tools_p17.py  test_cli_tools_p21.py  test_cli_tools_p22.py  (+19 more)
