[project]
name = "fcmd"
version = "0.1.0"
description = "极速 Python 工具集应用：DAG 任务调度 + 组合 CLI"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "fcmd" }]
keywords = ["cli", "dag", "scheduler", "task", "workflow", "tools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "rich>=13.0.0",
    "typing-extensions>=4.13.2; python_version < '3.13'",
]

[project.scripts]
fcmd = "fcmd.cli.main:main"
pymake = "fcmd.cli.pymake:main"

[project.optional-dependencies]
lint = ["pyrefly>=1.1.1", "ruff>=0.8.0"]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
]
dev = ["fcmd[lint,test]", "prek>=0.4.5", "tox>=4.25.0", "tox-uv>=1.13.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fcmd"]

[tool.hatch.build.targets.wheel.force-include]
"src/fcmd/py.typed" = "fcmd/py.typed"

[tool.uv]
required-version = ">=0.5.0"

[[tool.uv.index]]
default = true
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.uv.sources]
fcmd = { workspace = true }

[dependency-groups]
dev = ["fcmd[lint,test]"]

# ------------------------------------------------------------------ #
# Ruff 配置
# ------------------------------------------------------------------ #
[tool.ruff]
line-length = 120
target-version = "py38"
src = ["src", "tests"]

[tool.ruff.lint]
ignore = [
    "E501",    # line too long (由 formatter 处理)
    "PLC0415", # import 不在顶层 (懒导入是有意的)
    "PLR0915", # 语句过多 (复杂方法是有意的)
    "PLR2004", # 魔术值比较
    "PTH119",  # os.path.basename (sys.argv 有意使用)
    "PTH123",  # pathlib open() 替代
    "RUF001",  # 字符串中的歧义 Unicode 字符
    "RUF002",  # docstring 中的歧义 Unicode 字符
    "RUF003",  # 注释中的歧义 Unicode 字符
    "RUF012",  # 可变类属性 (配置有意)
    "SIM108",  # 使用三元运算符
]
select = [
    "ARG", # flake8-unused-arguments
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "PL",  # Pylint
    "PTH", # flake8-use-pathlib
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["ARG001", "ARG002"]

# ------------------------------------------------------------------ #
# Pyrefly 配置
# ------------------------------------------------------------------ #
[tool.pyrefly]
preset = "strict"
project-includes = ["**/*.py"]
python-version = "3.8"
search-path = ["."]

# ------------------------------------------------------------------ #
# Pytest 配置
# ------------------------------------------------------------------ #
[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "slow: 标记慢测试 (使用 '-m \"not slow\"' 跳过)",
]

# ------------------------------------------------------------------ #
# Coverage 配置
# ------------------------------------------------------------------ #
[tool.coverage.run]
branch = true
concurrency = ["thread"]
source = ["fcmd"]
omit = [
    "src/fcmd/cli/*",
    "src/fcmd/tools/*",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "raise NotImplementedError",
]
fail_under = 95
show_missing = true
