[project]
name = "fcmd"
version = "0.1.2"
description = "极速 Python 工具集应用：DAG 任务调度 + 组合 CLI"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "fcmd" }]
keywords = ["cli", "dag", "scheduler", "task", "workflow", "tools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "rich>=13.0.0",
    "typing-extensions>=4.13.2; python_version < '3.13'",
    "pyyaml>=6.0.1",
]

[project.scripts]
fcmd = "fcmd.cli.main:main"

[project.optional-dependencies]
img = ["pillow>=10.4.0"]
pdf = ["pymupdf>=1.24.11", "pypdf>=5.9.0"]
ocr = ["pytesseract>=0.3.13", "fcmd[img]"]
office = ["fcmd[img,pdf,ocr]"]
lint = ["pyrefly>=1.1.1", "ruff>=0.8.0"]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
]
dev = ["fcmd[lint,test,office]", "prek>=0.4.5", "tox>=4.25.0", "tox-uv>=1.13.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fcmd"]

[tool.hatch.build.targets.wheel.force-include]
"src/fcmd/py.typed" = "fcmd/py.typed"

[dependency-groups]
dev = ["fcmd[lint,test,office]"]
